--- a/ower/register.css
+++ b/ower/register.css
@@ -2,8 +2,8 @@
 	border:none;
 	background-color:transparent;
 }
-.form-control{
-	border:none;
+.form-control {
+	border: 1px solid rgba(38, 113, 185, 0.2);
 }
 .x-panel-content>.list-group-item{
 	border:none;
